--- a/backend-nest-ensolvers/.prettierrc
+++ b/backend-nest-ensolvers/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
   "trailingComma": "none",
-  "endOfLine": "auto",
   "tabWidth": 2,
-  "semi": false
+  "semi": false,
+  "singleQuote": true,
+  "endOfLine": "auto"
 }
